# agents

./: .gitignore  BACKLOG.md  INSTALLATION.md  README.md
claude/: memory  output-styles  settings.json  skills  statusline-command.sh
claude/hooks/: post-compact-rehydrate.sh  timestamp-notification.sh  timestamp-prompt.sh  timestamp-stop.sh
codex/: config.toml
gemini/: settings.json
gemini/commands/: audit.toml  commit.toml  review.toml
mcp/: README.md  pyproject.toml
mcp/src/harness_adapter_mcp/: __init__.py  server.py
mcp/src/harness_adapter_mcp/tools/: clone.py  doctor.py  install_tool.py  render.py
mcp/src/integrated_harness_kit_mcp/: __init__.py  repo.py  server.py
mcp/src/integrated_harness_kit_mcp/tools/: content.py  listing.py  status.py
mcp/tests/: __init__.py  _helpers.py  test_clone.py  test_content.py  test_doctor.py  test_install_tool.py  test_listing.py  test_render.py  test_repo.py  test_status.py
opencode/: agents  oh-my-openagent.json  opencode.json
scripts/: doctor.sh  install.py  install.sh  render-codex-config.sh  render-gemini-commands.sh  render-gemini-settings.sh  render-mcp.sh  test_install.py
shared/: AGENTS.md
shared/commands/: audit.md  commit.md  review.md
shared/instructions/: coding-style.md  doc-writing.md  git-workflow.md  language.md  notifications.md  orchestration.md  personal.md  working-style.md
shared/mcp/: servers.json
shared/memory/: MEMORY.md  feedback_act_dont_over_ask.md  feedback_always_create_project_instructions.md  feedback_always_use_worktree.md  (+17 more)
test/: Dockerfile  README.md
(+8 files in other folders)
