[project]
name = "integrated-harness-kit-mcp"
version = "0.3.1"
description = "MCP server for managing the tot0rokr/agents harness (Claude Code / Codex CLI / OpenCode / Gemini CLI shared config)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TOT0Ro", email = "tot0roprog@gmail.com" }
]
keywords = ["mcp", "claude", "codex", "opencode", "gemini", "agents", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/tot0rokr/agents"
Repository = "https://github.com/tot0rokr/agents"
Issues = "https://github.com/tot0rokr/agents/issues"

[project.scripts]
integrated-harness-kit-mcp = "integrated_harness_kit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integrated_harness_kit_mcp"]
